fixed nav z-index issue

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -86,6 +86,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   right: -40px;
   top: 20px;
   transition: all 1s ease-in;
+  z-index: 99;
 }
 
 #blob-nav.smaller {
